--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
     "ai",
     "fetchbrain"
   ],
-  "author": "",
+  "author": "FetchBrain <hello@fetchbrain.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fetchbrain-com/fetchbrain-sdk"
+    "url": "https://github.com/fetchbrain-com/sdk.git"
   },
   "homepage": "https://fetchbrain.com",
   "bugs": {
-    "url": "https://github.com/fetchbrain-com/fetchbrain-sdk/issues"
+    "url": "https://github.com/fetchbrain-com/sdk/issues"
   },
   "peerDependencies": {
     "crawlee": "^3.0.0"
@@ -55,11 +55,13 @@
     }
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "crawlee": "^3.7.0",
     "eslint": "^8.55.0",
     "express": "^4.18.2",
-    "@types/express": "^4.17.21",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
@@ -67,5 +69,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
