chore: update package name to @fetchbrain.com/sdk

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fetchbrain/sdk",
+  "name": "@fetchbrain.com/sdk",
   "version": "0.1.1",
   "description": "AI-powered scraping optimization for Crawlee - The AI That Already Knows The Web",
   "main": "./dist/index.js",
