--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -95,9 +95,10 @@ jobs:
 
       - name: Summary
         run: |
+          VERSION=$(node -p "require('./package.json').version")
           echo "## 📦 Published to npm" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Package**: @fetchbrain.com/sdk" >> $GITHUB_STEP_SUMMARY
-          echo "- **Version**: $(node -p \"require('./package.json').version\")" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version**: $VERSION" >> $GITHUB_STEP_SUMMARY
           echo "- **Tag**: ${{ steps.npm_tag.outputs.TAG }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Registry**: https://www.npmjs.com/package/@fetchbrain.com/sdk" >> $GITHUB_STEP_SUMMARY
