--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build",
-    "mock-server": "tsx src/mock/server.ts"
+    "mock-server": "tsx src/mock/server.ts",
+    "prepare": "husky"
   },
   "keywords": [
     "scraping",
@@ -62,6 +63,8 @@
     "crawlee": "^3.7.0",
     "eslint": "^8.55.0",
     "express": "^4.18.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
